# play-with-c

./: CMakeLists.txt
random-numbers/: CMakeLists.txt  rand-with-no-srand.c  rand-with-srand.c
